--- a/brainStation.html
+++ b/brainStation.html
@@ -131,9 +131,9 @@
 				<div class="pull-tech-imgfull flex-column">
 					<div class="content-container">
 						<h4 class="type-challenge">overview —</h4>
-					<p>As BrainStation continues to grow and evolve as an industry leader in career changing education, so to does the online experience. During my time at Konrad Group, alongside two other designers, we worked to help further solidify the overall BrainStation brand, both visually and from a user experience perspective.</p>
+					<p>As BrainStation continues to grow and evolve as an industry leader in career changing education, so too does the online experience. During my time at Konrad Group, alongside two other designers, we worked to help further solidify the overall BrainStation brand, both visually and from a user experience perspective.</p>
 
-					<p> This execusion was implemented on both core products: the public facing marketing site and the student facing <a href="https://brainstation.io/synapse-learning-platform" target="_blank">Synapse Learning Portal</a>.</p><br><br>
+					<p> This execution was implemented on both core products: the public facing marketing site and the student facing <a href="https://brainstation.io/synapse-learning-platform" target="_blank">Synapse Learning Portal</a>.</p><br><br>
 					</div>
 
 				</div>
@@ -203,7 +203,7 @@
 				<div class="pull-tech-imgfull flex-column">
 					<div class="content-container">
 						<h4 class="type-challenge">student facing portal —</h4>
-					<p>Alongside the marketing site, the <a href="https://brainstation.io/synapse-learning-platform" target="_blank">Synapse Learning Portal</a> gives students access to a full suite of education tools; these include project briefs, weekly lessons, online lectures, attendence, project submission, and more.</p>
+					<p>Alongside the marketing site, the <a href="https://brainstation.io/synapse-learning-platform" target="_blank">Synapse Learning Portal</a> gives students access to a full suite of education tools; these include project briefs, weekly lessons, online lectures, Attendance, project submission, and more.</p>
 
 					<p> The platform encourages student engagement, overall course participation and communication; both student to student and student to educator.
 					</div>
@@ -245,7 +245,7 @@
 			<div class="learning-outcome-container flex-center">
 				<div class="medium-container-ch">
 					<h4 class="type-challenge">learning outcome —</h4>
-					<h2> Understanding how past, present, and future user experiences help shape the product and how to update the branding, experience, and messaging to adapt to a evolving user base.</h2>
+					<h2> Understanding how past, present, and future user experiences help shape the product and how to update the branding, experience, and messaging to adapt to an evolving user base.</h2>
 				</div>
 			</div>
 
