--- a/brainStation.html
+++ b/brainStation.html
@@ -114,7 +114,7 @@
 			<div class="challenge-container flex-center">
 				<div class="medium-container-ch">
 					<h4 class="type-challenge">the challenge —</h4>
-					<h2> To create a more cohesive, multi-product experience for an evolving userbase; while launching new products that push the boundaries of traditional education.</h2>
+					<h2> To create a more cohesive, multi-product experience for an evolving userbase while launching new products that push the boundaries of traditional education.</h2>
 				</div>
 			</div>
 
@@ -133,7 +133,7 @@
 						<h4 class="type-challenge">overview —</h4>
 					<p>As BrainStation continues to grow and evolve as an industry leader in career changing education, so too does the online experience. During my time at Konrad Group, alongside two other designers, we worked to help further solidify the overall BrainStation brand, both visually and from a user experience perspective.</p>
 
-					<p> This execution was implemented on both core products: the public facing marketing site and the student facing <a href="https://brainstation.io/synapse-learning-platform" target="_blank">Synapse Learning Portal</a>.</p><br><br>
+					<p> This execution was implemented on both core products: the public-facing marketing site and the student-facing <a href="https://brainstation.io/synapse-learning-platform" target="_blank">Synapse Learning Portal</a>.</p><br><br>
 					</div>
 
 				</div>
@@ -171,11 +171,11 @@
 				<div class="pull-tech-imgfull flex-column">
 					<div class="content-container">
 						<h4 class="type-challenge">checkout flow —</h4>
-					<p>The checkout flow is one of the most important parts of the BrainStation product. Not only does it allows students to commit to their decision of further education, but it also helps them find a campus, course time, and payment plan catered to them.</p>
+					<p>The checkout flow is one of the most important parts of the BrainStation product. Not only does it allow students to commit to furthering their education, but it also helps them find a campus, course time, and payment plan catered to them.</p>
 
-					<p> The previous BrainStation flow was a two step process; one screen indicating all the details in a list format and the second a confirmation of their payment. Through user research this was found to be quite intimidating to many users, as the cost break down / summary view was an information overload. </p> 
+					<p> The previous BrainStation flow was a two-step process; one screen indicating all the details in a list format and and the second, confirming their payment. Through user research this was found to be quite intimidating to many users, as the cost break down / summary view was an information overload. </p> 
 
-					<p> The updated flow changed this, allowing a user to walk through a step by step experience creating this catered style of course creation as they went along. While they still have a summary view before final payment, the initial screens help ensure their on the right track for success.</p>
+					<p> The updated flow changed this, allowing a user to walk through a step-by-step experience creating a customized course as they went along. While they still had a summary view before final payment, the initial screens help ensure they are on the right track for success.</p>
 					</div>				
 				</div>
 			</div>
@@ -202,8 +202,8 @@
 			<div class="section-padding flex-center">
 				<div class="pull-tech-imgfull flex-column">
 					<div class="content-container">
-						<h4 class="type-challenge">student facing portal —</h4>
-					<p>Alongside the marketing site, the <a href="https://brainstation.io/synapse-learning-platform" target="_blank">Synapse Learning Portal</a> gives students access to a full suite of education tools; these include project briefs, weekly lessons, online lectures, Attendance, project submission, and more.</p>
+						<h4 class="type-challenge">student-facing portal —</h4>
+					<p>Alongside the marketing site, the <a href="https://brainstation.io/synapse-learning-platform" target="_blank">Synapse Learning Portal</a> gives students access to a full suite of education tools, including project briefs, weekly lessons, online lectures, attendance, project submission, and more.</p>
 
 					<p> The platform encourages student engagement, overall course participation and communication; both student to student and student to educator.
 					</div>
@@ -231,12 +231,14 @@
 					<div class="pull-tech  flex-sb">
 						<style>.pull-tech-text h2{max-width:850px;}</style>
 						<div class="pull-tech-text light-charcoal">
-							<h2> This main site rebrand was also applied to newly relaunched technology blog. </h2>
+							<h2> This main site rebrand was also applied to the newly relaunched technology blog. </h2>
+							<style>@media only screen and (max-width: 768px) {.cta-text-black{padding-bottom: 48px;}}</style>
 							<div class="cta-text-black"><a href="http://blog.brainstation.io"target="_blank"><h4>visit blog</h4></a></div>
 						</div>
-						<div class=" flex-column image-screen-small">
-						<img class="image-shadow" src="images/brainStationScreen1B.png" alt="BrainStation Checkout Flow Mobile Mockup">
-					</div>
+						<div class=" flex-column image-screen-small" style="text-align: center;">
+							<img class="image-shadow" src="images/brainStationScreen1B.png" alt="BrainStation Checkout Flow Mobile Mockup">
+							<h5>  Article illustrations by <a href="http://www.zacharymonteiro.com"target="_blank"> Zach Monteiro </a></h5>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -245,7 +247,7 @@
 			<div class="learning-outcome-container flex-center">
 				<div class="medium-container-ch">
 					<h4 class="type-challenge">learning outcome —</h4>
-					<h2> Understanding how past, present, and future user experiences help shape the product and how to update the branding, experience, and messaging to adapt to an evolving user base.</h2>
+					<h2> Understanding how past, present, and future user experiences help shape the product and how to update the branding, product, and messaging to adapt to an evolving user base.</h2>
 				</div>
 			</div>
 
