--- a/kitsuneBoard.html
+++ b/kitsuneBoard.html
@@ -290,7 +290,7 @@
 						<div class=cta-flex>
 						<div class="pull-tech-text">
 							<h2 class="white">The companion app allows users to track ride stastitics in real time using installed hardware in the board.</h2></div>
-							<div class= "cta-text"><a href="kitsuneBoard.html"><h4>View case study</h4></a></div>
+							<div class= "cta-text"><a href="kitsuneApp.html"><h4>View case study</h4></a></div>
 						</div>
 						<div class="pull-tech-drawing">
 							<object type="image/svg+xml" data="images/KitsuneAppCTA.svg"> Kitsune App cta </object>
