--- a/index.html
+++ b/index.html
@@ -248,21 +248,23 @@
 					</div>
 					<div class="recommendations-container flex-sb-links">
 						<div class="reco-title">
-							<h4> [ALBUMS]  </h4>
+							<h4> [PLAYLISTS]  </h4>
 					</div>
 					<div class="reco-list flex-sb-links">
 							<div class="recommendations">
 								<ul class="reco-links">
-									<li><a href="https://open.spotify.com/user/e4xy2srwpgk6uq7j5jokzm3iv?si=5X9ySM8XQaCDxUVLz6XfMg" target="_blank"> // Tape Club International </a> <a href="http://www.aaronmohr.com" target="_blank">(Aaron Mohr)</a></li>
-									<li><a href="https://open.spotify.com/album/5xG9gJcs9ut3qDWezHUlsX?si=q_AiUf4rQXmj-S7T-9pMQQ" target="_blank"> // Younger Now  </a></li>
-									<li><a href="https://open.spotify.com/album/0fwZXPXf41aF6H0CN3UtXV?si=JnrHyP1DQwCytnnZy4u7XQ" target="_blank"> // Love Me / Love Me Not  </a></li>
+									<li><a href="https://open.spotify.com/playlist/0QAOcEGpYl7iRFVp2bPwX9?si=Nwwpj0lZS7qpHFjllpm-8Q" target="_blank"> // 80s boy  </a></li>
+									<li><a href="https://open.spotify.com/playlist/3IVjzhotjAscIx0O1mlBXD?si=PgsAx_DBTm6fgq3jdqTXEw" target="_blank"> // comforter </a></li>
+									<li><a href="https://open.spotify.com/playlist/1KYe63x6658tVhbYbpDPnU?si=4nFi8bYsQK6Je9oJmq-Cmw" target="_blank"> // echo </a></li>
+									<li><a href="https://open.spotify.com/playlist/3J0gNrFfISv5K0C1xrDPIP?si=31xRXoEAT26GG_84YTZOQw" target="_blank"> // kawaiifunk  </a></li>
 								</ul>
 							</div>
 							<div class="recommendations p-75">
 								<ul class="reco-links">
-									<li><a href="https://open.spotify.com/album/1OyADPvYTlmT5hV0mtxLAY?si=NH9TWit2TMiYmxeOLe-pwA" target="_blank"> // Bloom </a></li>
-									<li><a href="https://open.spotify.com/album/28enuddLPEA914scE6Drvk?si=O7El7lWtQwSjfXTJdZrujg" target="_blank"> // Geography  </a></li>
-									<li><a href="https://open.spotify.com/album/3tx8gQqWbGwqIGZHqDNrGe?si=pu_AuibuQQmN85ww0qUdKQ" target="_blank"> // Sweetener </a></l>
+									<li><a href="https://open.spotify.com/playlist/32chyTolJDeib12B5bwyiY?si=pev_sz82SxmZSGWVogyG0w" target="_blank"> // sure  </a></li>
+									<li><a href="https://open.spotify.com/playlist/2az0AXWG3YbSFT3hh1YwWp?si=zBejYDCrR9mGUBfZgSD7Jw" target="_blank"> // that's wild  </a></li>
+									<li><a href="https://open.spotify.com/playlist/1oTkFEqKDvY752GgQlfach?si=hdc9K6BbTpugt95H1JtlMw" target="_blank"> // wind </a></l>
+									<li><a href="https://open.spotify.com/playlist/1mT0F43DUMa6d7NPNRCms5?si=SCZ8WiJcQ26Lqqodlk7R7w" target="_blank"> // you're fine </a></li>
 									
 							</div>
 						</div>
