--- a/index.html
+++ b/index.html
@@ -235,12 +235,12 @@
 				<div class="about-content">
 
 					<p class="larger-p">I’m a designer, space enthusiast, and am constantly trying to make my apartment look like it's from the 70's.<br><br>
-					<p>I live and work in Toronto Canada, where I'm currently designing to create a smarter home at <a href="http://www.ecobee.com/" target="_blank">ecobee</a>. Before that, I was designing digital experiences at both <a href="http://www.konrad.com" target="_blank">Konrad</a> and <a href="http://www.Brainstation.io" target="_blank">BrainStation</a>. And before that, I was studying at the <a href="http://design.ampd.yorku.ca/" target="_blank"> York / Sheridan’s Bachelor of Design</a> program.</p> <p>I have always been drawn to understanding how people and products interact. Whether it's pulling a push door for the third time that day, or rationalizing a cold brew at 4pm with friends, the smallest moments make me rethink opportunities for better solutions. </p>
+					<p>I live and work in Toronto Canada, where I'm currently designing a smarter home experience at <a href="http://www.ecobee.com/" target="_blank">ecobee</a>. Before that, I was designing digital experiences at both <a href="http://www.konrad.com" target="_blank">Konrad</a> and <a href="http://www.Brainstation.io" target="_blank">BrainStation</a>. And before that, I was studying at the <a href="http://design.ampd.yorku.ca/" target="_blank"> York / Sheridan’s Bachelor of Design</a> program.</p> <!-- <p>I have always been drawn to understanding how people and products interact. Whether it's pulling a push door for the third time that day, or rationalizing a cold brew at 4pm with friends, the smallest moments make me rethink opportunities for better solutions. </p> -->
 					<p>I’m always interested in trying new things or collaborating on projects. If you’d like to get ahold of me, shoot over an email to <a href="mailto:brockmdonaldson@gmail.com"> brockmdonaldson@gmail.com</a>. </p>
 				
 					<div class="social-about">
 						<ul class="social-links">
-							<li><a href="http://www.terrestriial.tumblr.com" target="_blank"><i class="fa fa-tumblr" aria-hidden="true"></i></a></li>
+							<li><a href="https://terrestriial.tumblr.com" target="_blank"><i class="fa fa-tumblr" aria-hidden="true"></i></a></li>
 							<li><a href="http://www.instagram.com/brockmdonaldson" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 							<li><a href="https://www.twitter.com/brockmdonaldson" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 							<li><a href="https://www.linkedin.com/in/brockmdonaldson" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
@@ -381,7 +381,7 @@
     		song = song.substring (0,20)+"…";
     	}
     		$('.song-title').html(""+song+" \ ");
-   			$('.song-artist').html("– " +artist+"\ ");
+   			$('.song-artist').html("— " +artist+"\ ");
 
   });
 
