--- a/brainStation.html
+++ b/brainStation.html
@@ -102,7 +102,7 @@
 				<style>.project-title {top:40px;}h3{color:#272727;}@media only screen and (max-width: 768px) {
 .project-title{top:72px;}</style>
 				<h1 class="project-title hidden">BrainStation</h1>
-				<h3 class="project-title hidden"><strong>Designed and Developed by <a href="http://konradgroup.com"target="_blank">Konrad Group</a></strong></h3>
+				<h3 class="project-title hidden"><strong>Designed for and developed by <a href="http://konradgroup.com"target="_blank">Konrad</a></strong></h3>
 				<div class="cta-text"><a href="http://www.brainstation.io"target="_blank"><h4>Visit brainstation.io</h4></a></div>
 			</div>
 
