--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
 				<ul class="header-content flex-header">
 					<a href="index.html"><li>Brock Donaldson</li></a>
 					<div class="social">
-						<li><a href="http://www.twitter.com/brockmdonaldson" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-						<li><a href="http://www.instagram.com/brockmdonaldson" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-						<li><a href="https://open.spotify.com/user/donabroc" target="_blank"><i class="fa fa-spotify" aria-hidden="true"></i></a></li>
+						<li><a href="http://www.twitter.com/brockmdonaldson" target="_blank"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
+						<li><a href="http://www.instagram.com/brockmdonaldson" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
+						<li><a href="https://open.spotify.com/user/donabroc" target="_blank"><i class="fab fa-spotify" aria-hidden="true"></i></a></li>
 					</div>
 				</ul>
 			</div>
@@ -178,7 +178,9 @@
 
 			<div class="intro-mobile-hero flex-header">
 				<div class="intro-mobile-text">
-					<div class="orange-circle"></div><h2>hey,<br> i’m brock</h2><h3> Designer, aspiring astronaut, and puller of push doors.</h3>
+					<div class="orange-circle">
+						
+					</div><h2>hey,<br> i’m brock</h2><h3> Designer, aspiring astronaut, and puller of push doors.</h3>
 				</div>
 			</div> 
 
