--- a/kitsuneApp.html
+++ b/kitsuneApp.html
@@ -84,9 +84,9 @@
 				<ul class="header-content flex-header">
 					<a href="index.html"><li>Brock Donaldson</li></a>
 					<div class="social">
-						<li><a href="http://www.twitter.com/brockmdonaldson" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-						<li><a href="http://www.instagram.com/brockmdonaldson" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-						<li><a href="https://open.spotify.com/user/donabroc" target="_blank"><i class="fa fa-spotify" aria-hidden="true"></i></a></li>
+						<li><a href="http://www.twitter.com/brockmdonaldson" target="_blank"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
+						<li><a href="http://www.instagram.com/brockmdonaldson" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
+						<li><a href="https://open.spotify.com/user/donabroc" target="_blank"><i class="fab fa-spotify" aria-hidden="true"></i></a></li>
 					</div>
 				</ul>
 			</div>
