--- a/kitsuneApp.html
+++ b/kitsuneApp.html
@@ -129,7 +129,7 @@
 				<div class="gradient-section gradient-blue flex-center">
 					<div class="pull-tech flex-sb grad">
 						<div class="image-double-float">
-							<img src="images/KitsuneAppMockup2.png" alt="Kitsune App Angled Device Mockup">
+							<img src="images/KitsuneAppMockup1.png" alt="Kitsune App Angled Device Mockup">
 						</div>
 						<div class="pull-tech-text-grad white">
 							<h2 class="white"> Using the app is as simple as connecting to the board and syncing a recent trip. </h2>
@@ -150,7 +150,7 @@
 
 			<div class="section-full flex-center">
 				<div class="image-span-container">
-					<img src="images/KitsuneAppMockup3b.jpg" alt="Kitsune App Board Sycing photo">
+					<img src="images/KitsuneAppMockup3c.png" alt="Kitsune App Board Sycing photo">
 				</div>
 			</div>
 
@@ -169,7 +169,7 @@
 
 			<div class="section-full flex-center">
 				<div class="image-span-container">
-					<img src="images/KitsuneAppMockup4b.png" alt="Kitsune App Smart Watch Mockup">
+					<img src="images/KitsuneAppMockup4c.png" alt="Kitsune App Smart Watch Mockup">
 				</div>
 			</div>
 
@@ -269,7 +269,7 @@
 
 		<div class="section-full flex-center">
 				<div class="image-span-container">
-					<img src="images/KitsuneAppMockup5.png" alt="Kitsune App Smart Watch Mockup">
+					<img src="images/KitsuneAppMockup6.png" alt="Kitsune App Smart Watch Mockup">
 				</div>
 			</div>
 
